--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -3,13 +3,16 @@ description: Report bugs or issues.
 body:
   - type: markdown
     attributes:
-      value: Thanks for taking the time to fill out this bug report! The more info you provide, the more we can help you. If you are a [Wagmi Sponsor](https://github.com/sponsors/wevm?metadata_campaign=gh_issue), your issues are prioritized.
+      value: |
+        Thanks for taking the time to fill out this bug report! The more info you provide, the more we can help you.
+
+        If you are a [Wagmi Sponsor](https://github.com/sponsors/wevm?metadata_campaign=gh_issue), your issues are prioritized.
 
   - type: textarea
     attributes:
       label: Describe the bug
-      description: Clear and concise description of what the bug. If you intend to submit a PR for this issue, tell us in the description. Thanks!
-      placeholder: I am doing… What I expect is… What actually happening is…
+      description: Clear and concise description of the bug. If you intend to submit a PR for this issue, tell us in the description. Thanks!
+      placeholder: I am doing… What I expect is… What is actually happening…
     validations:
       required: true
 
@@ -17,7 +20,7 @@ body:
     id: reproduction
     attributes:
       label: Link to Minimal Reproducible Example
-      description: "Please provide a link that can reproduce the problem: [new.wagmi.sh](https://new.wagmi.sh) for runtime issues or [TypeScript Playground](https://www.typescriptlang.org/play) for type issues. For most issues, you will likely get asked to provide a minimal reproducible example so why not add one now :) If a report is vague (e.g. just snippets, generic error message, etc.) and has no reproduction, it will receive a \"Needs Reproduction\" label and be auto-closed."
+      description: "Please provide a link that can reproduce the problem: [new.wagmi.sh](https://new.wagmi.sh) for runtime issues or [TypeScript Playground](https://www.typescriptlang.org/play) for type issues. For most issues, you will likely get asked to provide a minimal reproducible example so why not add one now :) If a report is vague (e.g. just snippets, generic error message, screenshot, etc.) and has no reproduction, it will receive a \"Needs Reproduction\" label and be auto-closed."
       placeholder: https://new.wagmi.sh
     validations:
       required: false
@@ -29,11 +32,25 @@ body:
     validations:
       required: false
 
+  - type: dropdown
+    attributes:
+      label: What Wagmi package(s) are you using?
+      multiple: true
+      options:
+        - 'wagmi'
+        - '@wagmi/cli'
+        - '@wagmi/connectors'
+        - '@wagmi/core'
+        - '@wagmi/vue'
+        - 'create-wagmi'
+    validations:
+      required: true
+
   - type: input
     attributes:
       label: Wagmi Version
-      description: What version of Wagmi are you using?
-      placeholder: x.y.z
+      description: What version of Wagmi are you using? If using multiple, separate with comma (e.g. `wagmi@x.y.z, @wagmi/cli@x.y.z`).
+      placeholder: x.y.z (do not write `latest`)
     validations:
       required: true
 
@@ -41,7 +58,7 @@ body:
     attributes:
       label: Viem Version
       description: What version of [Viem](https://viem.sh) are you using?
-      placeholder: x.y.z
+      placeholder: x.y.z (do not write `latest`)
     validations:
       required: true
 
@@ -49,7 +66,7 @@ body:
     attributes:
       label: TypeScript Version
       description: What version of TypeScript are you using? Wagmi requires `typescript@>=5`.
-      placeholder: x.y.z
+      placeholder: x.y.z (do not write `latest`)
     validations:
       required: false
 
@@ -64,7 +81,8 @@ body:
   - type: textarea
     attributes:
       label: Anything else?
-      description: Anything that will give us more context about the issue you are encountering. Framework (e.g. React, Vue), app framework (e.g. Next.js, Nuxt), bundler, etc.
+      description: Anything that will give us more context about the issue you are encountering. Framework version (e.g. React, Vue), app framework (e.g. Next.js, Nuxt), bundler, etc.
     validations:
       required: false
+
 
