--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "build": "pnpm run --r --filter \"./packages/**\" build",
     "changeset:prepublish": "pnpm version:update && pnpm build && bun .scripts/formatPackageJson.ts && bun .scripts/generateProxyPackages.ts",
     "changeset:publish": "pnpm changeset:prepublish && changeset publish",
-    "changeset:version": "changeset version && pnpm version:update",
+    "changeset:version": "changeset version && pnpm version:update && pnpm format",
     "clean": "pnpm run --r --parallel clean && rm -rf packages/**/*.json.tmp",
     "deps": "pnpx taze -r",
     "dev": "pnpm dev:react",
