--- a/.github/DISCUSSION_TEMPLATE/connector-request.yml
+++ b/.github/DISCUSSION_TEMPLATE/connector-request.yml
@@ -5,7 +5,7 @@ body:
       value: |
         Thanks for your interest in contributing a new Connector to the Wagmi! If you haven't already, please read the [Contributing Guidelines](https://wagmi.sh/dev/contributing). Once you submit the form, the Wagmi team will follow up in the discussion thread to discuss next steps.
 
-        Please note that in order for connector requests to be accepted, the team creating the connector must [sponsor Wagmi](https://github.com/sponsors/wevm). It takes time and effort to maintain third-party connectors. Wagmi is an OSS project that depends on sponsors and grants to continue our work. Please get in touch via [dev@wevm.dev](mailto:dev@wevm.dev) if you have questions about sponsoring.
+        Please note that in order for connector requests to be accepted, the team creating the Connector must [sponsor Wagmi](https://github.com/sponsors/wevm). It takes time and effort to maintain third-party connectors. Wagmi is an OSS project that depends on sponsors and grants to continue our work. Please get in touch via [dev@wevm.dev](mailto:dev@wevm.dev) if you have questions about sponsoring.
 
   - type: textarea
     attributes:
@@ -31,15 +31,15 @@ body:
   - type: textarea
     attributes:
       label: Are the Connector's integrations production-ready and generally available?
-      description: Connectors are intended to be used by consumers in production as part of Wagmi. As such, the connector and all dependencies must be production-ready and generally available. This means your connector should not rely on non-production software or be restricted to a limited group of users. For example, if your connector requires a wallet that has a closed beta, it is not ready for inclusion in Wagmi.
+      description: Connectors are intended to be used by consumers in production as part of Wagmi. As such, the Connector and all dependencies must be production-ready and generally available. This means your connector should not rely on non-production software or be restricted to a limited group of users. For example, if your connector requires a wallet that has a closed beta, it is not ready for inclusion in Wagmi.
       placeholder: Info about the Connector and any dependencies (e.g. browser extension, wallet app, npm package).
     validations:
       required: true
 
   - type: checkboxes
     attributes:
-      label: Are you committed to actively mainting the Connector?
-      description: It is critical connectors are updated in a timely manner and actively maintained so that users of Wagmi can rely on them in production settings. The Wagmi core team will provide as much assistance as possible to keep connectors up-to-date with breaking changes from Wagmi, but it is your responsibility to ensure that any dependencies and issues/discussions related to the connector are handled in a timely manner. If this is not done, the connector could be removed from the future versions.
+      label: Are you committed to actively maintaining the Connector?
+      description: It is critical connectors are updated in a timely manner and actively maintained so that users of Wagmi can rely on them in production settings. The Wagmi core team will provide as much assistance as possible to keep connectors up-to-date with breaking changes from Wagmi, but it is your responsibility to ensure that any dependencies and issues/discussions related to the Connector are handled in a timely manner. If this is not done, the Connector could be removed from the future versions.
       options:
         - label: Yes, my team is or I am committed to actively maintaining the Connector.
           required: true
